--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 DIETN is an Android Applicaiton with a mordern User interface and easy statistical graphs and views.
-It all made in java with the help of some libraries from github thanks to them i got so close to finalizing my project.
+It all made in java with the help of some libraries from github thanks to them i got so close to finalizing my final year project.
 Libraries used:
   1. nightonke:jellytogglebutton
   2. Lottieanimations
