--- a/README
+++ b/README
@@ -1,5 +1,13 @@
-DIETN is an Android Applicaiton with a mordern User interface and easy statistical graphs and views.
+Introduction
+
+Dietn is an Android Applicaiton with a mordern User interface and easy statistical graphs and views.
 It all made in java with the help of some libraries from github thanks to them i got so close to finalizing my final year project.
+
+Screenshots
+![Screenshot_20200523_193451_booleandevops io dietn](https://user-images.githubusercontent.com/37891898/90626414-91c6eb00-e238-11ea-895a-5937de28c558.jpg)
+![Screenshot_20200523_193542_booleandevops io dietn](https://user-images.githubusercontent.com/37891898/90626715-f124fb00-e238-11ea-8504-ce81d3ab04b1.jpg)
+![Screenshot_20200523_193552_booleandevops io dietn](https://user-images.githubusercontent.com/37891898/90626806-0437cb00-e239-11ea-993f-6fd5e8d5440e.jpg)
+
 Libraries used:
   1. nightonke:jellytogglebutton
   2. Lottieanimations
